<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vacancyVM"
            type="com.gemastik.evenia.viewmodel.VacancyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="#F9F9F9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SeekerHomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="#F9F9F9"
                    android:layout_width="match_parent"
                    android:layout_height="500dp">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/gl_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.4" />

                    <ImageView
                        android:id="@+id/iv_seeker_poster"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:contentDescription="@string/poster"
                        android:scaleType="fitXY"
                        android:src="@drawable/seeker_home_poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_menu"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="18dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_menu"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="22dp"
                        android:background="@drawable/search_box"
                        android:drawableEnd="@drawable/ic_search"
                        android:drawablePadding="8dp"
                        android:hint="@string/cari"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="4dp"
                        android:paddingBottom="4dp"
                        android:textColorHint="#c1c2c4"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/gl_horizontal" />

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/kategori"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/rv_category"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_search" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="@id/iv_seeker_poster"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_seeker_poster"
                        tools:listitem="@layout/item_category" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#689DCB"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/toolbar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_menu_toolbar"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_menu"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_search_toolbar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:layout_marginEnd="22dp"
                            android:background="@drawable/search_box"
                            android:drawableEnd="@drawable/ic_search"
                            android:drawablePadding="8dp"
                            android:hint="@string/cari"
                            android:inputType="textEmailAddress"
                            android:paddingStart="8dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="4dp"
                            android:paddingBottom="4dp"
                            android:textColorHint="#c1c2c4"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/iv_menu_toolbar"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_vacancy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/lowongan"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_vacancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    app:vacanciesData="@{vacancyVM.vacancies}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_vacancy"
                    tools:listitem="@layout/item_vacancy" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
